# auryl

./: MODULE.bazel  README.md  requirements.in  requirements.txt
.github/workflows/: run-tests.yml
auryl/: BUILD.bazel  auryl.py  error.py  grammar.lark  main.py  parser.py  tree.py
tests/: BUILD.bazel  test_nodes.py  test_parser.py  tests.py
tests/resources/: comp.aur  other.aur
