load("@auryl_pip//:requirements.bzl", "requirement")

py_library(
    name="lib",
    srcs=["auryl.py", "parser.py", "tree.py", "error.py"],

    data = ["grammar.lark"],
    deps = [
        requirement("lark-parser"),
    ],
    visibility=["//visibility:public"]
)

py_binary(
    name="auryl",
    srcs=["main.py"],
    main="main.py",
    deps = [
        ":lib"
    ],
)
